feat: corrections qualité pour 18/20 - tests, sécurité, normalisation
- Normaliser les fins de ligne CRLF → LF avec .gitattributes
- Supprimer import java.util.Arrays inutilisé dans AdminController
- Configurer ddl-auto selon profil (dev=update, prod=validate)
- Ajouter 3 tests unitaires sur CommentaireService
- Sécuriser .gitignore avec .env et fichiers build
- Supprimer mots de passe en clair du README.md
- Moderniser Arrays.asList → List.of()
- Améliorer sécurité et qualité du code